--- a/scanner/result.html
+++ b/scanner/result.html
@@ -6,7 +6,6 @@
                 font-family: 'JetBrains Mono';
                 font-size: 40px;
                 color: white;
-        
             }
         </style>
         <body style="background-color:#2b2b2b;">
@@ -20,10 +19,10 @@
 <span style="color:#E67E22;">[</span>
 <span style="color:#A9DFBF;">30</span>
 <span style="color:#E67E22;">]</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#AED6F1;">string</span>
 <span style="color:white;">hi</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#82E0AA;">cout</span>
 <span style="color:#DFFF00;"><</span>
 <span style="color:#DFFF00;"><</span>
@@ -32,12 +31,12 @@
 <span style="color:white;">Your</span>
 <span style="color:white;">Name</span>
 <span style="color:#DE3163;">"</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#82E0AA;">cin</span>
 <span style="color:#DFFF00;">></span>
 <span style="color:#DFFF00;">></span>
 <span style="color:white;">str</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#82E0AA;">cout</span>
 <span style="color:#DFFF00;"><</span>
 <span style="color:#DFFF00;"><</span>
@@ -55,15 +54,15 @@
 <span style="color:white;">is</span>
 <span style="color:white;">codescracker</span>
 <span style="color:#DE3163;">"</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#82E0AA;">cout</span>
 <span style="color:#DFFF00;"><</span>
 <span style="color:#DFFF00;"><</span>
 <span style="color:white;">endl</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#DE3163;">return</span>
 <span style="color:#A9DFBF;">0</span>
-<span style="color:white;">;</span>
+<span style="color:#8d42f5;">;</span>
 <span style="color:#E67E22;">}</span>
 <span style="color:white;">EOF</span>
 </body></html>
